--- a/Sesión 21(25-11-2019)/HojaEstilos2.scss
+++ b/Sesión 21(25-11-2019)/HojaEstilos2.scss
@@ -8,3 +8,42 @@ body {
     /*Propiedad para poner la familia y tamaño en una sola propiedad*/
     color: $colorprincipal;
 }
+
+.contenedor {
+    width: 70%;
+    margin: auto;
+    // height: auto;
+    border: 1px solid black;
+    display: flow-root;
+    /*A pesar de no darle altura al contenedor, permite que éste se adecue a los elemento s(float)
+    que contiene*/
+}
+
+article[role="main"] {
+    float: left;
+    width: 600px/960px*100%;
+    background-color: salmon;
+    min-height: 200px;
+}
+
+aside[role="complementary"] {
+    float: right;
+    width: 360px/960px*100%;
+    background-color: sandybrown;
+    min-height: 200px;
+}
+
+/*Prueba de operadores*/
+h3 {
+    font-size: 5px *2;
+}
+
+h4 {
+    font-size: 2px +2px;
+}
+h5 {
+    font-size: 10px +2;
+}
+h6 {
+    /*font-size: 10px +2em; no compila el preprocesador porque no son unidades compatibles*/
+}
